--- a/e-commerce_campos_sergio/index.html
+++ b/e-commerce_campos_sergio/index.html
@@ -54,7 +54,6 @@
     <footer class="text-center bg-success text-white py-3 mt-5">
         <p>&copy; 2024 Ecobiosphera. Todos los derechos reservados.</p>
     </footer>
-
-    <script src="script.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
